# kreo-daemon

./: CMakeLists.txt  README.md
extra/: 99-kreo-daemon.rules  kreo-daemon.service
src/: main.cpp
